@@ -80,6 +80,6 @@ public class GeoWebCacheRemoteEventsBroker {
 
     @Override
     public String toString() {
-        return String.format("%s(%s)", getClass().getSimpleName(), originService());
+        return "%s(%s)".formatted(getClass().getSimpleName(), originService());
     }
 }
